--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
   <!-- SKILLS -->
   <section class="skills">
-    <h2 data-aos="fade-up">Technical Skills</h2>
+  <h2 data-aos="fade-up">Technical Skills</h2>
 
-    <div class="skill-card" data-aos="zoom-in">Python (Pandas, Scikit-learn)</div>
-    <div class="skill-card" data-aos="zoom-in">Machine Learning</div>
-    <div class="skill-card" data-aos="zoom-in">Data Visualization</div>
-    <div class="skill-card" data-aos="zoom-in">HTML, CSS, JavaScript</div>
-  </section>
+  <div class="skill-card" data-aos="zoom-in">C++ (DSA, STL, OOP)</div>
+  <div class="skill-card" data-aos="zoom-in">Python (Pandas, NumPy, Scikit-learn)</div>
+  <div class="skill-card" data-aos="zoom-in">Machine Learning</div>
+  <div class="skill-card" data-aos="zoom-in">Data Visualization (Matplotlib, Seaborn)</div>
+  <div class="skill-card" data-aos="zoom-in">HTML, CSS, JavaScript</div>
+</section>
 
   <!-- PROJECTS -->
   <section class="projects" id="projects">
@@ -116,4 +117,5 @@
   </script>
 
 </body>
+
 </html>
