--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
 </head>
 
 <body>
+  <nav class="navbar">
+  <div class="logo">Suranjan</div>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#certificates">Certificates</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
   <!-- HERO -->
-  <section class="hero">
+  <section class="hero" id="home">
     <h1 data-aos="fade-up">Suranjan Chaudhari</h1>
     <p data-aos="fade-up" data-aos-delay="200">
       CSE (AI & ML) Student | Data & ML Enthusiast
@@ -37,7 +47,7 @@
   </section>
 
   <!-- SKILLS -->
-  <section class="skills">
+  <section class="skills" id="skills">
   <h2 data-aos="fade-up">Technical Skills</h2>
 
   <div class="skill-card" data-aos="zoom-in">C++ (DSA, STL, OOP)</div>
@@ -73,7 +83,7 @@
   </section>
 
   <!-- CERTIFICATES -->
-  <section class="certificates">
+  <section class="certificates" id="certificates">
     <h2 data-aos="fade-up">Certificates</h2>
 
     <a class="project-card" data-aos="zoom-in" target="_blank"
@@ -101,6 +111,15 @@
       IT Specialist – HTML & CSS
     </a>
   </section>
+  <section class="contact" id="contact">
+  <h2 data-aos="fade-up">Contact Me</h2>
+
+  <div class="socials" data-aos="zoom-in">
+    <a href="https://github.com/suranjan2006" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/suranjan-chaudhari-08a745342/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="mailto:suranjanchaudhari07@gmail.com"><i class="fas fa-envelope"></i></a>
+  </div>
+</section>
 
   <!-- FOOTER -->
   <footer>
@@ -119,3 +138,4 @@
 </body>
 
 </html>
+
