--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>Suranjan | AI/ML Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Font -->
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <!-- Animation -->
+  <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- CSS -->
@@ -19,7 +19,12 @@
 </head>
 
 <body>
-  <nav class="navbar">
+
+<!-- LIVE BACKGROUND -->
+<canvas id="bg"></canvas>
+
+<!-- NAVBAR -->
+<nav class="navbar">
   <div class="logo">Suranjan</div>
   <ul>
     <li><a href="#home">Home</a></li>
@@ -30,112 +35,59 @@
   </ul>
 </nav>
 
-  <!-- HERO -->
-  <section class="hero" id="home">
-    <h1 data-aos="fade-up">Suranjan Chaudhari</h1>
-    <p data-aos="fade-up" data-aos-delay="200">
-      CSE (AI & ML) Student | Data & ML Enthusiast
-    </p>
+<!-- HERO -->
+<section class="hero" id="home">
+  <h1 data-aos="fade-up">Suranjan Chaudhari</h1>
+  <p data-aos="fade-up" data-aos-delay="200">
+    CSE (AI & ML) Student | Data & ML Enthusiast
+  </p>
 
-    <div class="socials" data-aos="zoom-in" data-aos-delay="400">
-      <a href="https://github.com/suranjan2006" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/suranjan-chaudhari-08a745342/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:suranjanchaudhari07@gmail.com"><i class="fas fa-envelope"></i></a>
-    </div>
-
-    <button onclick="document.getElementById('projects').scrollIntoView()">View Projects</button>
-  </section>
-
-  <!-- SKILLS -->
-  <section class="skills" id="skills">
-  <h2 data-aos="fade-up">Technical Skills</h2>
-
-  <div class="skill-card" data-aos="zoom-in">C++ (DSA, STL, OOP)</div>
-  <div class="skill-card" data-aos="zoom-in">Python (Pandas, NumPy, Scikit-learn)</div>
-  <div class="skill-card" data-aos="zoom-in">Machine Learning</div>
-  <div class="skill-card" data-aos="zoom-in">Data Visualization (Matplotlib, Seaborn)</div>
-  <div class="skill-card" data-aos="zoom-in">HTML, CSS, JavaScript</div>
-</section>
-
-  <!-- PROJECTS -->
-  <section class="projects" id="projects">
-    <h2 data-aos="fade-up">Featured Projects</h2>
-
-    <div class="project-card" data-aos="fade-right">
-      <h3>Movie Recommender System</h3>
-      <p>TF-IDF | Cosine Similarity | NLP</p>
-    </div>
-
-    <div class="project-card" data-aos="fade-left">
-      <h3>Laptop Price Predictor</h3>
-      <p>Random Forest | Regression</p>
-    </div>
-
-    <div class="project-card" data-aos="fade-right">
-      <h3>Spam Email Classifier</h3>
-      <p>Naive Bayes | NLP</p>
-    </div>
-
-    <div class="project-card" data-aos="fade-left">
-      <h3>Face Recognition System</h3>
-      <p>OpenCV | Deep Learning</p>
-    </div>
-  </section>
-
-  <!-- CERTIFICATES -->
-  <section class="certificates" id="certificates">
-    <h2 data-aos="fade-up">Certificates</h2>
-
-    <a class="project-card" data-aos="zoom-in" target="_blank"
-      href="https://www.linkedin.com/posts/suranjan-chaudhari-08a745342_proud-to-have-participated-in-hackwise-2026-activity-7422976421234475008-ZVL1">
-      HackWise 2026 Participation
-    </a>
-
-    <a class="project-card" data-aos="zoom-in" target="_blank"
-      href="https://www.linkedin.com/posts/suranjan-chaudhari-08a745342_python-ibm-paruluniversity-activity-7362319983973974018-quMB">
-      Python for Data Science – IBM
-    </a>
-
-    <a class="project-card" data-aos="zoom-in" target="_blank"
-      href="https://www.linkedin.com/posts/suranjan-chaudhari-08a745342_it-specialist-javascript-was-issued-by-activity-7323950555305836544-4sej">
-      IT Specialist – JavaScript
-    </a>
-
-    <a class="project-card" data-aos="zoom-in" target="_blank"
-      href="https://www.linkedin.com/posts/suranjan-chaudhari-08a745342_html-css-learning-activity-7296412771833786368-rNjZ">
-      HTML & CSS Learning
-    </a>
-
-    <a class="project-card" data-aos="zoom-in" target="_blank"
-      href="https://www.linkedin.com/posts/suranjan-chaudhari-08a745342_it-specialist-html-and-css-was-issued-by-activity-7295696445351829504-MLw4">
-      IT Specialist – HTML & CSS
-    </a>
-  </section>
-  <section class="contact" id="contact">
-  <h2 data-aos="fade-up">Contact Me</h2>
-
-  <div class="socials" data-aos="zoom-in">
+  <div class="socials" data-aos="zoom-in" data-aos-delay="400">
     <a href="https://github.com/suranjan2006" target="_blank"><i class="fab fa-github"></i></a>
     <a href="https://www.linkedin.com/in/suranjan-chaudhari-08a745342/" target="_blank"><i class="fab fa-linkedin"></i></a>
     <a href="mailto:suranjanchaudhari07@gmail.com"><i class="fas fa-envelope"></i></a>
   </div>
 </section>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2026 Suranjan Chaudhari
-  </footer>
+<!-- SKILLS -->
+<section class="skills" id="skills">
+  <h2 data-aos="fade-up">Technical Skills</h2>
+  <div class="skill-card" data-aos="zoom-in">C++ (DSA, STL)</div>
+  <div class="skill-card" data-aos="zoom-in">Python (ML, Pandas)</div>
+  <div class="skill-card" data-aos="zoom-in">Machine Learning</div>
+  <div class="skill-card" data-aos="zoom-in">HTML, CSS, JavaScript</div>
+</section>
 
-  <!-- JS -->
-  <script src="script.js"></script>
+<!-- PROJECTS -->
+<section class="projects" id="projects">
+  <h2 data-aos="fade-up">Featured Projects</h2>
+  <div class="project-card" data-aos="fade-right">Movie Recommender System</div>
+  <div class="project-card" data-aos="fade-left">Laptop Price Predictor</div>
+</section>
 
-  <!-- Animation -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({ duration: 1200, once: true });
-  </script>
+<!-- CERTIFICATES -->
+<section class="certificates" id="certificates">
+  <h2 data-aos="fade-up">Certificates</h2>
+  <div class="project-card" data-aos="zoom-in">IBM Python</div>
+  <div class="project-card" data-aos="zoom-in">HackWise 2026</div>
+</section>
+
+<!-- CONTACT -->
+<section class="contact" id="contact">
+  <h2 data-aos="fade-up">Contact</h2>
+  <div class="socials" data-aos="zoom-in">
+    <a href="mailto:suranjanchaudhari07@gmail.com"><i class="fas fa-envelope"></i></a>
+  </div>
+</section>
+
+<footer>© 2026 Suranjan Chaudhari</footer>
+
+<!-- JS -->
+<script src="script.js"></script>
+
+<!-- AOS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init({ duration: 1200, once: true });</script>
 
 </body>
-
 </html>
-
