--- a/index.html
+++ b/index.html
@@ -19,9 +19,23 @@
 </head>
 
 <body>
+  <!-- NAVBAR -->
+<nav class="navbar">
+  <div class="logo">Suranjan</div>
+
+  <ul class="nav-links">
+    <li><a href="#">Home</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#certificates">Certificates</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
 
   <!-- HERO -->
-  <section class="hero">
+  <section class="hero" id="home">
+
     <h1 data-aos="fade-up">Suranjan Chaudhari</h1>
     <p data-aos="fade-up" data-aos-delay="200">
       CSE (AI & ML) Student | Data & ML Enthusiast
@@ -37,7 +51,9 @@
   </section>
 
   <!-- SKILLS -->
- <section class="skills">
+<section class="skills" id="skills">
+
+
   <h2 data-aos="fade-up">Technical Skills</h2>
 
   <div class="skill-card" data-aos="zoom-in">C++ (DSA, STL, OOP)</div>
@@ -48,7 +64,9 @@
 </section>
 
   <!-- PROJECTS -->
-  <section class="projects" id="projects">
+ <section class="projects" id="projects">
+
+
     <h2 data-aos="fade-up">Featured Projects</h2>
 
     <div class="project-card" data-aos="fade-right">
@@ -73,7 +91,8 @@
   </section>
 
   <!-- CERTIFICATES -->
-  <section class="certificates">
+  <section class="certificates" id="certificates">
+
     <h2 data-aos="fade-up">Certificates</h2>
 
     <a class="project-card" data-aos="zoom-in" target="_blank"
@@ -118,3 +137,4 @@
 
 </body>
 </html>
+
