Add menu toggle for mobile navigation

--- a/index.html
+++ b/index.html
@@ -20,17 +20,22 @@
 
 <body>
   <!-- NAVBAR -->
+
 <nav class="navbar">
   <div class="logo">Suranjan</div>
 
-  <ul class="nav-links">
-    <li><a href="#">Home</a></li>
+  <div class="menu-toggle" id="menu-toggle">
+    <i class="fas fa-bars"></i>
+  </div>
+
+  <ul class="nav-links" id="nav-links">
+    <li><a href="#home">Home</a></li>
     <li><a href="#skills">Skills</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="#certificates">Certificates</a></li>
-    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
+
 
 
   <!-- HERO -->
@@ -137,4 +142,5 @@
 
 </body>
 </html>
+
 
