--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#certificates">Certificates</a></li>
+      <li><a href="#contact">Contact</a></li>
+
     </ul>
 
   </nav>
@@ -99,6 +101,31 @@
   <a class="project-card" href="#">JavaScript</a>
 
 </section>
+<!-- CONTACT -->
+<section class="contact" id="contact">
+
+  <h2>Contact Me</h2>
+
+  <div class="contact-box">
+
+    <p>
+      <i class="fas fa-envelope"></i>
+      Email: suranjan@email.com
+    </p>
+
+    <p>
+      <i class="fab fa-github"></i>
+      GitHub: github.com/suranjan
+    </p>
+
+    <p>
+      <i class="fab fa-linkedin"></i>
+      LinkedIn: linkedin.com/in/suranjan
+    </p>
+
+  </div>
+
+</section>
 
 
 <footer>
@@ -110,3 +137,4 @@
 
 </body>
 </html>
+
